# sample-aws-agentops-fix-first-agent

./: .gitignore  .gitleaksignore  README.md
ab_testing/: .gitignore  README.md  ab_testing.ipynb  ab_testing_python.ipynb  lab1_ab_testing_targets.ipynb  lab1_evaluations.ipynb  lab2_ab_testing_config_bundle.ipynb  lab3_ab_testing_targets.ipynb  prompts.txt
ab_testing/evaluations/: check_online_eval.sh  invoke_agent.py  run_batch_eval.sh
ab_testing/scripts/: check_ab_results.py  check_prerequisites.sh  send_traffic.py  send_traffic.sh
ab_testing/win/: ab_testing.ipynb  check_ab_results.bat  check_prerequisites.bat  cleanup_all.bat  deploy_agents.bat  deploy_all.bat  deploy_testing_infra.bat  package_agents.bat  run_target_ab_testing.bat  send_traffic.bat  stop_ab_test.bat  wait_for_runtimes.bat
agentops_ab_testing/: ab_testing_workshop_copy.txt
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: types.ts  web-hosting-stack.ts
fixFirstAgent/: README.md  pyproject.toml  requirements.txt
fixFirstAgent-multi-region/: README.md
fixFirstAgent-multi-region/cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
fixFirstAgent-multi-region/lambda/: proxy_handler.py
fixFirstAgent-multi-region/scripts/: deploy.sh  failover.sh  test-proxy.sh
fixFirstAgent/cdk/: package-lock.json  package.json
fixFirstAgent/cdk/lib/stacks/: agentcore-stack.ts  index.ts
fixFirstAgent/src/: long_term_memory_hook.py  main.py
fixFirstAgent/src/model/: load.py
fixFirstAgentWeb/: README.md
scripts/: deploy-all.sh  deploy-web.sh  package-agent.sh
(+61 files in other folders)
